Namespace change to r3, demo folder incorporated

--- a/test/d3sample_1.css
+++ b/test/d3sample_1.css
@@ -26,11 +26,11 @@ path.area {
 }
 
 .x.axis line {
-  stroke: #222;
+  stroke: #000;
 }
 
 .x.axis .minor {
-  stroke-opacity: .1;
+  stroke-opacity: 1;
 }
 
 .x.axis path {
