--- a/test/d3sample_1.css
+++ b/test/d3sample_1.css
@@ -21,23 +21,23 @@ path.area {
   fill: #e7e7e7;
 }
 
-.horaxis, .veraxis {
+.r3_horaxis, .r3_veraxis {
   shape-rendering: crispEdges;
 }
 
-.horaxis > line {
+.r3_horaxis line{
   stroke: #000;
 }
 
-.horaxis .minor {
+.r3_horaxis .minor {
   stroke-opacity: 1;
 }
 
-.horaxis path {
+.r3_horaxis path {
   display: none;
 }
 
-.veraxis line, .veraxis path {
+.r3_veraxis line, .r3_veraxis path {
   fill: none;
   stroke: #000;
 }
