config based fonts on axis labels, yay

--- a/test/d3/d3sample_1.css
+++ b/test/d3/d3sample_1.css
@@ -25,6 +25,14 @@ path.area {
   shape-rendering: crispEdges;
 }
 
+.r3_horaxis > text {
+	font-family : 'Arial';
+}
+
+.r3_veraxis > text {
+	font-family : 'Arial';
+}
+
 .r3_horaxis path, .r3_veraxis path {
  fill: none;
   stroke: #000;
