Added support for labels for axis, configuration not yet possible

--- a/test/d3/d3sample_1.css
+++ b/test/d3/d3sample_1.css
@@ -57,3 +57,8 @@ path.area {
   background-color: lavender;
 }
 
+text .horizontal_label {
+	-moz-transform : rotate(-90deg);
+	-webkit-transform : rotate(-90deg);
+}
+
