Undid header border bottom changes, footer fonts fixed

--- a/css/main.css
+++ b/css/main.css
@@ -33,9 +33,9 @@ a {
 	position: fixed;
 	top: 0;
 	left: 0;
-	background-color: fff;
-	border-bottom: 1px solid #ff5c00;
-	box-shadow: 0px 3px 2px #FFE4D5;
+	background-color: #fff;
+	border-bottom: 0px solid #ff5c00;
+	box-shadow: 0px 3px 2px #dddddd;
 	z-index: 100;
 }
 
@@ -516,16 +516,15 @@ a:hover.slidesjs-stop {
 
 .contact-header {
 	display: inline-block;
-	font-size: 13px;
+	font-size: 14px;
 	font-family: 'Cabin Condensed';
 	width: 80px;
-	text-transform: uppercase;
 }
 
 .contact-content {
-	font-family: 'PT Sans';
+	font-family: 'Cabin Condensed';
 	display: inline-block;
-	font-size: 12px;
+	font-size: 13px;
 	width: 150px;
 	vertical-align: middle;
 }
