--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ a {
 	top: 0;
 	left: 0;
 	background-color: #fff;
-	border-bottom: 0px solid #ff5c00;
+	border-bottom: 1px solid #dadada;
 	box-shadow: 0px 3px 2px #dddddd;
 	z-index: 100;
 }
@@ -210,7 +210,7 @@ button.download:hover {
 	margin: 0 auto;
 	height: 10px;
 	content: '';
-	border-top: 1px solid #ddd;
+	border-top: 1px solid #dadada;
 	display: block;
 }
 
